home and projects page

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,57 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #171717;
+    --foreground: #fff;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-geist-sans);
+    --font-mono: var(--font-geist-mono);
+
+    --animate-startup: startup 0.5s ease-in;
+
+    @keyframes startup {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.bg-menu {
+    background-image: url("/menu-bg.png");
+}
+
+.bg-bedroom {
+    background-image: url("/bedroom-placeholder.jpg");
+}
+
+.bg-pc {
+    background-image: url("/pc-bg.gif");
+}
+
+.pc-icon {
+    @apply flex flex-col items-center cursor-pointer h-fit;
+}
+
+.pc-icon > img {
+    @apply size-12;
 }
